--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
     <header>
         <img src="./assests/img/logo (1).svg" alt="the booleaner" id="logo">
     </header>
-    <main></main>
+    <main>
+        <section>
+            <h1>
+                Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee
+            </h1>
+            <p>Scritto da The Booleaner</p>
+            <p>il 10/10/2020</p>
+        </section>
+        <!--title-->
+    </main>
     <footer></footer>
     
 </body>
