add the lorem text

--- a/index.html
+++ b/index.html
@@ -20,6 +20,29 @@
             <p>il 10/10/2020</p>
         </section>
         <!--title-->
+        <div>
+            <img src="./assests/img/tim-1.jpg" alt="">
+            <img src="./assests/img/tim-2.jpg" alt="">
+            <p>1st photo: jon S. and James L. Knight Foundation, by Scott Henrichsen</p>
+            <p>2nd Photo: Wikimedia, by Paul Clarke</p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqam erat volutpat.
+                 ut wisi enim ad minim veniam. quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum irriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feufiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+            </p>
+            <ul>
+                <li>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quis vitae aliquam quisquam impedit velit rem, illum quos quas, eveniet tempora.
+                </li>
+                <li>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo consequatur commodi totam consequuntur earum recusandae cumque eos doloribus deleniti dignissimos ducimus voluptate, pariatur dolor id tenetur quam. Atque, itaque dolorem?
+                </li>
+                <li>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt natus similique id. Perspiciatis corporis assumenda vel sint earum dolorem in quisquam iure maxime. Nulla maxime, voluptatum deleniti ipsa fugiat dolor!
+                </li>
+            </ul>
+
+        </div>
+        <!--lorem text-->
     </main>
     <footer></footer>
     
