add lorem table

--- a/index.html
+++ b/index.html
@@ -43,6 +43,44 @@
 
         </div>
         <!--lorem text-->
+        <div>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Lorem, ipsum dolor.</th>
+                        <th>Lorem, ipsum dolor.</th>
+                        <th>Lorem, ipsum dolor.</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Lorem, ipsum dolor.</th>
+                        <th>Lorem, ipsum dolor.</th>
+                        <th>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis animi minima veritatis commodi neque, illo fugit dolorum officiis pariatur ad ipsa velit explicabo reiciendis iusto iure debitis laboriosam error porro?
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>Lorem, ipsum dolor.</th>
+                        <th>Lorem, ipsum dolor.</th>
+                        <th>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis animi minima veritatis commodi neque, illo fugit dolorum officiis pariatur ad ipsa velit explicabo reiciendis iusto iure debitis laboriosam error porro?
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>Lorem, ipsum dolor.</th>
+                        <th>Lorem, ipsum dolor.</th>
+                        <th>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis animi minima veritatis commodi neque, illo fugit dolorum officiis pariatur ad ipsa velit explicabo reiciendis iusto iure debitis laboriosam error porro?
+                        </th>
+                    </tr>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis vitae blanditiis nihil iusto officia tempora aliquam esse libero, facere qui quas quidem at animi totam, nobis ipsam ab quo autem enim, ullam veniam tempore voluptatum! Officia ex fugiat necessitatibus laudantium!
+                    </p>
+                </tbody>
+            </table>
+        </div>
+        <!--lorem table-->
     </main>
     <footer></footer>
     
