--- a/index.html
+++ b/index.html
@@ -82,7 +82,12 @@
         </div>
         <!--lorem table-->
     </main>
-    <footer></footer>
+    <footer>
+        <p>Potrebbero interessarti</p>
+        <img src="./assests/img/monitor.jpg" alt="">
+        <img src="./assests/img/graph.jpg" alt="">
+        
+    </footer>
     
 </body>
 </html>
