tring to fix css for title section

--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
             <h1>
                 Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee
             </h1>
-            <p>Scritto da The Booleaner</p>
-            <p>il 10/10/2020</p>
+            <p>
+                <span class="grey">Scritto da </span> <span class="blue">The Booleaner</span>
+                <br>
+                <span class="grey"><span class="data"> il 10/10/2020</span></span>
+            </p>
+            
         </section>
         <!--title-->
         <div>
-            <img src="./assests/img/tim-1.jpg" alt="">
-            <img src="./assests/img/tim-2.jpg" alt="">
+            <img src="./assests/img/tim-1.jpg" alt="" id="tim_1">
+            <img src="./assests/img/tim-2.jpg" alt="" id="tim_2">
             <p>1st photo: jon S. and James L. Knight Foundation, by Scott Henrichsen</p>
             <p>2nd Photo: Wikimedia, by Paul Clarke</p>
             <p>
